fixtures/invalid/python-pyproject-private-import/lib/python/producer/public.py
__all__ = [
    "exposed",
]


def exposed():
    return True
